--- a/NavBar-React-Router-master/package.json
+++ b/NavBar-React-Router-master/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
     "react-table": "^7.8.0",
+    "react-toastify": "^9.1.3",
     "styled-components": "^6.1.1",
     "web-vitals": "^2.1.4"
   },
