--- a/NavBar-React-Router-master/package.json
+++ b/NavBar-React-Router-master/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "datatables.net": "^1.13.7",
+    "date-fns": "^3.0.6",
     "jquery": "^3.7.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.9.1",
