--- a/NavBar-React-Router-master/package.json
+++ b/NavBar-React-Router-master/package.json
@@ -16,6 +16,7 @@
     "datatables.net": "^1.13.7",
     "date-fns": "^3.0.6",
     "jquery": "^3.7.1",
+    "js-cookie": "^3.0.5",
     "react": "^17.0.2",
     "react-bootstrap": "^2.9.1",
     "react-data-table-component": "^7.5.4",
