--- a/NavBar-React-Router-master/package.json
+++ b/NavBar-React-Router-master/package.json
@@ -2,6 +2,7 @@
   "name": "navbar",
   "version": "0.1.0",
   "private": true,
+  "homepage": "ennet29",
   "dependencies": {
     "@fontsource/roboto": "^5.0.8",
     "@fortawesome/fontawesome-free": "^6.4.2",
