--- a/NavBar-React-Router-master/package.json
+++ b/NavBar-React-Router-master/package.json
@@ -2,7 +2,7 @@
   "name": "navbar",
   "version": "0.1.0",
   "private": true,
-  "homepage": "ennet29",
+  "homepage": "http://kennet29.github.io/App-React",
   "dependencies": {
     "@fontsource/roboto": "^5.0.8",
     "@fortawesome/fontawesome-free": "^6.4.2",
@@ -32,6 +32,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy" :"npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
